playing with navbar height to fix title cropping

--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,6 +1,7 @@
 .NavBar {
     background-color: white;
-    height: 75px;
+    /* height: 75px; */
+    height: 85px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -65,7 +66,8 @@
         flex-direction: column;
         text-align: center;
         position: absolute;
-        top: 75px;
+        /* top: 75px; */
+        top: 85px;
         right: 0;
         width: 100%;
         background-color: white;
